# fm-pm-evaluator

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
containers/: fmharness.def
data/static/: drug_xref.parquet  gdsc2_auc_pubchem_cids.txt  hallmark_signatures.gmt  manifest.json  stack_hvg_genes.txt  stack_soragni_gene_map.csv
docs/: adapter_contract.md  environment.md  fm-pdo-evaluator-plan.md  models.md
scripts/: _plotting.py  baselines_soragni.py  benchmark_soragni.py  biomarker_anchored.py  bridge_generated_to_auc.py  build_l1000_context.py  build_stack_panel.py  build_tahoe_context.py  build_tahoe_pseudobulk_deltas.py  check_data_repro.py  fetch_hallmark.py  gdsc_representation_increment.py  per_patient_eval.py  plot_data.py  plot_global_rho.py  plot_pearson.py  predict_expression_baselines.py  prep_stack_input.py  score_generation_eval.py  score_viability_adapters.py  stack_npy_to_csv.py  transfer_gdsc_soragni.py  transfer_pharmaformer_lite.py  validate_bridge_readout.py
scripts/download/: _utils.py  download_gdsc2_sarcoma.py  download_soragni.py
src/fmharness/: __init__.py  adapters.py  bilinear.py  deltas.py  evaluation.py  l1000.py  signatures.py  stack_panel.py  tahoe.py
tests/: test_adapters.py  test_coderdata_loader.py  test_controls.py  test_deltas.py  test_drug_xref.py  test_evaluation.py  test_gdsc2_sarcoma_loader.py  test_kernel.py  test_l1000.py  test_models.py  test_schema.py  test_signatures.py  test_simple.py  test_soragni_loader.py  test_splits.py  test_stack_panel.py  test_tahoe.py
(+31 files in other folders)
